fdo#57631 fix collection of property states

Change-Id: I607518da26c9430916d922b8e36143cc6dd76f25
(cherry picked from commit d3d95afe5856ef06659d61c3572c7682e5a03766)
Signed-off-by: David Tardon <dtardon@redhat.com>